--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,11 @@
 #
 
 # Name of your site (displayed in the header)
-name: Daniel Allington
+name: Yaqi Zhang 33
 
 # Short bio or description (displayed in the header)
-description: Senior Lecturer in Social and Cultural Artificial Intelligence at King's College London
-
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
+description: Master students who take the course in KCL
+# URL of your avatar or profile pic (you could use your GitHub profile pic) // add the photo images here
 avatar: https://avatars.githubusercontent.com/u/6640474
 
 #
