--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Daniel Allington
+name: Yaqi Zhang
 
 # Short bio or description (displayed in the header)
-description: Senior Lecturer in Social and Cultural Artificial Intelligence at King's College London
+description: Students who take the course in King's College London
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/6640474
