--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Yaqi Zhang
 description: Students who take the course in King's College London
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars.githubusercontent.com/u/6640474
+avatar: https://avatars.githubusercontent.com/u/92733536?s=400&u=47e3e4e46d24a5d79015b24dc92e53caafe9cdda&v=4
 
 #
 # Flags below are optional
