--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Yaqi Zhang
+name: Yaqi Zhang's culture web
 
 # Short bio or description (displayed in the header)
-description: Students who take the course in King's College London
+description: An Students who take the web course in King's College London. This is a web to show my expedition.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars.githubusercontent.com/u/92733536?s=400&u=47e3e4e46d24a5d79015b24dc92e53caafe9cdda&v=4
+avatar: https://avatars.githubusercontent.com/u/92733536?s=400&u=ea0d2a04fd72a505b51fa266aef7ffbd8528a184&v=4
 
 #
 # Flags below are optional
