--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Yaqi Zhang's culture web
 
 # Short bio or description (displayed in the header)
-description: King's College London Student. This is a web to show my expedition.
+description: This is a web to show the expdition of a King's College London Student.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/92733536?s=400&u=ea0d2a04fd72a505b51fa266aef7ffbd8528a184&v=4
