--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Yaqi Zhang's culture web
+name: Yaqi's culture web
 
 # Short bio or description (displayed in the header)
 description: This is a web to show the expdition of a King's College London Student.
