--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Yaqi's culture web
+name: Yaqi Zhang
 
 # Short bio or description (displayed in the header)
 description: A student at King's College London. This is a web to show my expedition,
