--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@
 name: Yaqi Zhang
 
 # Short bio or description (displayed in the header)
-description: Student at King's College London. This is a web to show my expedition,
+description: Student at King's College London. This is a web to show Wildlife Photographer gallery
+
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/92733536?s=400&u=ea0d2a04fd72a505b51fa266aef7ffbd8528a184&v=4
