--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Yaqi Zhang
 
 # Short bio or description (displayed in the header)
-description: Student at King's College London. This is a web to show Wildlife Photographer gallery
+description: Student at King's College London. This is a web to show Wildlife Photographer Gallery.
 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
